--- a/frontend/ClientApp/public/index.html
+++ b/frontend/ClientApp/public/index.html
@@ -1,67 +1,119 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <base href="%PUBLIC_URL%/" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Breath of the Wild Search</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <base href="%PUBLIC_URL%/" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <title>Breath of the Wild Search</title>
 
-    <style>
-      @keyframes pulse {
-        0% {
-          box-shadow: 0 0 0 0 rgba(255,65,54, 0.4);
-        }
-        70% {
-          box-shadow: 0 0 0 10px rgba(255,65,54, 0);
-        }
-        100% {
-          box-shadow: 0 0 0 8px rgba(255,65,54, 0);
-        }
+  <style>
+    @keyframes pulse {
+      0% {
+        box-shadow: 0 0 0 0 rgba(255, 65, 54, 0.4);
+      }
+      70% {
+        box-shadow: 0 0 0 10px rgba(255, 65, 54, 0);
+      }
+      100% {
+        box-shadow: 0 0 0 8px rgba(255, 65, 54, 0);
+      }
+    }
+
+    @media only screen and (max-width: 800px) {
+      table,
+      thead,
+      body,
+      th,
+      td,
+      tr {
+        display: block;
       }
 
-      table .glyphicon-heart {
-        border-radius: 50%;
-        background-color: rgba(0, 0, 0, 0);
-        color: #FF4136;
-        animation: pulse 2s infinite;
-        width: 20px;
-        height: 20px;
-        line-height: 20px;
-        text-align: center;
+      tbody tr {
+        margin-bottom: 10px;
       }
 
-      table .glyphicon-heart-empty {
-        background-color: transparent;
-        color: #FF4136;
-        width: 20px;
-        height: 20px;
-        line-height: 20px;
-        text-align: center;
+      thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
       }
-    </style>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
+
+      td {
+        border: none !important;
+        position: relative;
+        width: calc(100% - 400px) !important;
+        padding-left: 150px !important;
+        white-space: normal;
+        text-align: left;
+      }
+
+      td:before {
+        position: absolute;
+        top: 6px;
+        left: 6px;
+        padding-right: 10px;
+        white-space: nowrap;
+        text-align: left;
+        font-weight: bold;
+      }
+
+      td:before {
+        content: attr(data-title);
+      }
+    }
+
+    .glyphicon-heart {
+      color: #FF4136;
+    }
+
+    .glyphicon-flash {
+      color: #f0ad4e;
+    }
+
+    .glyphicon-sunglasses {
+      color: #EEEEEE;
+    }
+
+    table .glyphicon-heart {
+      border-radius: 50%;
+      background-color: rgba(0, 0, 0, 0);
+      animation: pulse 2s infinite;
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+      text-align: center;
+    }
+
+    table .glyphicon-heart-empty {
+      background-color: transparent;
+      color: #FF4136;
+      width: 20px;
+      height: 20px;
+      line-height: 20px;
+      text-align: center;
+    }
+  </style>
+</head>
+
+<body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -71,5 +123,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
