adds filters for recipes

--- a/frontend/ClientApp/public/index.html
+++ b/frontend/ClientApp/public/index.html
@@ -96,6 +96,24 @@
       line-height: 20px;
       text-align: center;
     }
+
+    table .nested-table {
+      background-color: cornsilk; 
+    }
+
+    table .nested-table td {
+      border: none !important;
+      background-color: cornsilk !important;
+    }
+    
+    table .nested-table th {
+      display: none !important;
+    }
+
+    table .fit {
+      width: 1px;
+      white-space: nowrap;
+    }
   </style>
 </head>
 
